# project-insighter-backend

./: .dockerignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  verify_setup.py
.github/workflows/: backend-deploy.yml
backend/app/api/: __init__.py  account_dashboard.py  calendar_event.py  calendar_milestone.py  calendar_reminder.py  calendar_task.py  deps.py  export_data.py  stakeholder_details.py
backend/app/core/: config.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  account_dashboard.py  calendar_event.py  calendar_milestone.py  calendar_reminder.py  calendar_reminder_users.py  calendar_task.py  document.py  stakeholder_details.py
backend/app/schemas/: __init__.py  account_dashboard.py  calendar_event.py  calendar_milestone.py  calendar_reminder.py  calendar_reminder_users.py  calendar_task.py  document.py  stakeholder_details.py
backend/app/services/: __init__.py  account_dashboard_service.py  calendar_event_service.py  calendar_milestone_service.py  calendar_reminder_service.py  calendar_task_service.py  export_service.py  stakeholder_details_service.py
backend/doc_insighter/api/: best_practices.py  code_quality.py  insights.py  project_docs.py  sow.py  tech_review.py  wsr.py
backend/doc_insighter/core/: ai_agent.py  document_kpi_prompts.py  extraction_pipeline.py  insight_agents.py  json_to_markdown.py  llama_parsing.py
backend/doc_insighter/services/: best_practices.py  code_quality.py  insight_service.py  sow.py  wsr.py  (+2 more)
backend/utitlites/: app_utilites.py  async_pool_executor.py  doc_importer.py
(+5 files in other folders)
