[project]
name = "project-insighter-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws>=0.2.5",
    "crewai[azure-ai-inference]>=1.6.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.1",
    "langchain-text-splitters>=1.1.1",
    "llama-parse>=0.6.94",
    "loguru>=0.7.3",
    "mangum>=0.21.0",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymupdf4llm>=0.3.4",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
